grammar.js
    source_file: ($) => repeat(choice($.context, $.machine)),

    // ==========================
    // Context
    // ==========================

    context: ($) =>
      seq(
        kw('context'),
        field('name', $._component_name),
        repeat($._context_clause),
        kw('end'),
      ),

    // Component names are Rodin file names, which may contain hyphens
    // (ENV_C-1). The hyphen parts attach with token.immediate so a name is
    // distinguished from subtraction; in name positions no expression is
    // valid anyway.
    _component_name: ($) => choice($.identifier, $.component_name),

    component_name: ($) =>
      seq($.identifier, repeat1(token.immediate(/-[a-zA-Z0-9_']+/))),

    _context_clause: ($) =>
      choice(
        $.extends_clause,
        $.sets_clause,
        $.constants_clause,
        $.axioms_clause,
        $.theorems_clause,
      ),

    extends_clause: ($) => seq(kw('extends'), spaceSep1($._component_name)),

    sets_clause: ($) => seq(kw('sets'), spaceSep1($.set_declaration)),

    // Deferred set (S) or enumerated set (S = {a, b, c}).
    set_declaration: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq('=', '{', commaSep1($.identifier), '}')),
      ),

    constants_clause: ($) => seq(kw('constants'), spaceSep1($.identifier)),

    axioms_clause: ($) =>
      seq(kw('axioms'), repeat1(alias($.labeled_predicate, $.axiom))),

    // A THEOREMS section holds theorem-flagged axioms (in a context) or
    // invariants (in a machine); Rodin models the flag as an attribute, not a
    // separate container.
    machine: ($) =>
      seq(
        kw('machine'),
        field('name', $._component_name),
        repeat($._machine_clause),
        kw('end'),
      ),

    _machine_clause: ($) =>
      choice(
        $.refines_clause,
        $.sees_clause,
        $.variables_clause,
        $.invariants_clause,
        $.theorems_clause,
        $.variant_clause,
        $.events_clause,
      ),

    refines_clause: ($) =>
      seq(kw('refines'), field('target', $._component_name)),

    variables_clause: ($) => seq(kw('variables'), spaceSep1($.identifier)),

    variant_clause: ($) =>
      seq(kw('variant'), field('expression', $._expression)),

    // ==========================
    // Events
    // ==========================

    events_clause: ($) => seq(kw('events'), repeat1($.event)),

    // The INITIALISATION event needs no special rule: its name parses as a
    // plain identifier (there is no `initialisation` keyword token to shadow
    // it).
    event: ($) =>
      seq(
        optional(field('convergence', $._convergence)),
        kw('event'),
        field('name', $.identifier),
        optional(
          choice(
            seq(kw('refines'), field('refines', $.identifier)),
            seq(kw('extends'), field('extends', $.identifier)),
          ),
        ),
        repeat($._event_clause),
        kw('end'),
      ),

    _convergence: ($) =>
      choice(kw('ordinary'), kw('convergent'), kw('anticipated')),

    _event_clause: ($) =>
      choice(
        $.status_clause,
        $.any_clause,
        $.where_clause,
        $.with_clause,
        $.witness_clause,
        $.then_clause,
      ),

    status_clause: ($) =>
      seq(kw('status'), field('convergence', $._convergence)),

    any_clause: ($) =>
      seq(kw('any'), spaceSep1(field('parameter', $.identifier))),

    where_clause: ($) =>
      seq(
        choice(kw('where'), kw('when')),
        repeat1(alias($.labeled_predicate, $.guard)),
      ),

    // WITH gives witnesses for refined variables, WITNESS for abstract
    // parameters; both hold labeled predicates.
    with_clause: ($) =>
      seq(kw('with'), repeat1(alias($.labeled_predicate, $.witness))),

    witness_clause: ($) =>
      seq(kw('witness'), repeat1(alias($.labeled_predicate, $.witness))),

    then_clause: ($) =>
      seq(choice(kw('then'), kw('begin')), repeat1($.action)),

    // ==========================
    // Actions
    // ==========================

    action: ($) =>
      seq(
        optional(field('label', $.label)),
        choice($.skip, $.assignment, $.becomes_member, $.becomes_such),
      ),

    skip: ($) => token(ci('skip')),

    // Deterministic (parallel) assignment x, y ≔ E, F and functional
    // override f(x) ≔ E.
    assignment: ($) =>
      seq(
        commaSep1(field('left', choice($.identifier, $.function_application))),
        choice('≔', alias(':=', '≔')),
        commaSep1(field('right', $._expression)),
      ),

    // Non-deterministic: becomes member of a set.
    becomes_member: ($) =>
      seq(
        commaSep1(field('left', $.identifier)),
        choice(':∈', alias('::', ':∈')),
        field('right', $._expression),
      ),

    // Non-deterministic: becomes such that a predicate holds.
    becomes_such: ($) =>
      seq(
        commaSep1(field('left', $.identifier)),
        choice(':∣', alias(':|', ':∣')),
        field('predicate', $._predicate),
      ),

    // ==========================
    // Labeled predicates
    // ==========================

    // Accepts "@label P", "theorem @label P", "@label theorem P", and bare
    // "P" (rossi-compatible; Rodin's text tools always emit labels).
    _predicate: ($) =>
      choice(
        $.quantified_predicate,
        $.binary_predicate,
        $.not_predicate,
        $.comparison_predicate,
        $.parenthesized_predicate,
        $.true,
        $.false,
        // Predicate application: finite(S), partition(S, A, B), and (like
        // rossi) any identifier applied to arguments.
        $.function_application,
      ),

    binary_predicate: ($) => {
      const table = [
        [PRED.equivalence, choice('⇔', alias('<=>', '⇔'))],
        [PRED.implication, choice('⇒', alias('=>', '⇒'))],
        [PRED.disjunction, choice('∨', alias(ci('or'), '∨'))],
        [PRED.conjunction, choice('∧', alias('&', '∧'))],
      ];
      return choice(
        ...table.map(([level, operator]) =>
          prec.left(
            level,
            seq(
              field('left', $._predicate),
              field('operator', operator),
              field('right', $._predicate),
            ),
          ),
        ),
      );
    },

    comparison_predicate: ($) =>
      seq(
        field('left', $._expression),
        field('operator', choice(
          '=',
          choice('≠', alias('/=', '≠')),
          choice('≤', alias('<=', '≤')),
          choice('≥', alias('>=', '≥')),
          '<',
          '>',
          choice('∈', alias(':', '∈')),
          choice('∉', alias('/:', '∉')),
          choice('⊂', alias('<<:', '⊂')),
          choice('⊄', alias('/<<:', '⊄')),
          choice('⊆', alias('<:', '⊆')),
          choice('⊈', alias('/<:', '⊈')),
        )),
        field('right', $._expression),
      ),

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.inverse_expression,
        $.relational_image,
        $.identifier,
        $.number,
        $.string,
        $.true,
        $.false,
        $.integer_set,
        $.natural_set,
        $.natural1_set,
        $.bool_set,
        $.empty_set,
        $.builtin,
        $.function_application,
        $.function_override,
        $.parenthesized_expression,
        $.set_enumeration,
        $.set_comprehension,
        $.lambda_expression,
        $.quantified_union,
        $.quantified_inter,
        $.bool_conversion,
        $.if_expression,
        $._identifier_like,
      ),

    // `union` and `inter` are operators only when a quantified form follows;
    // otherwise they are ordinary identifiers, like in rossi, where the PEG
    // backtracks (the generalized union of kernel_lang, union(S), is an
    // identifier application there too). Capitalised spellings like `Union`
    // are real identifiers in published models.
    _identifier_like: ($) =>
      choice(
        alias(ci('union'), $.identifier),
        alias(ci('inter'), $.identifier),
      ),

    binary_expression: ($) => {
      // [level, operator] — ASCII spellings alias to the canonical Unicode
      // operator, so consumers and queries see a single spelling. U+E100–E103
      // are the Rodin private-use code points for ⤨-style relation arrows and
      // relational override.
      const table = [
        // Pair constructor (maplet), left-associative.
        [EXPR.maplet, choice('↦', alias('|->', '↦'))],
        // Set-of-relations constructors (and rossi's ⦂ type ascription).
        [EXPR.arrow, choice('↔', alias('<->', '↔'))],
        [EXPR.arrow, choice(alias('', '<<->'), '<<->')],
        [EXPR.arrow, choice(alias('', '<->>'), '<->>')],
        [EXPR.arrow, choice(alias('', '<<->>'), '<<->>')],
        [EXPR.arrow, choice('⇸', alias('+->', '⇸'))],
        [EXPR.arrow, choice('→', alias('-->', '→'))],
        [EXPR.arrow, choice('⤔', alias('>+>', '⤔'))],
        [EXPR.arrow, choice('↣', alias('>->', '↣'))],
        [EXPR.arrow, choice('⤀', alias('+>>', '⤀'))],
        [EXPR.arrow, choice('↠', alias('->>', '↠'))],
        [EXPR.arrow, choice('⤖', alias('>->>', '⤖'))],
        [EXPR.arrow, choice('⦂', alias(ci('oftype'), '⦂'))],
        // Binary set operators.
        [EXPR.setop, choice('∪', alias('\\/', '∪'))],
        [EXPR.setop, choice('∩', alias('/\\', '∩'))],
        [EXPR.setop, choice('∖', alias('\\', '∖'))],
        [EXPR.setop, choice('×', alias('**', '×'))],
        [EXPR.setop, ';'],
        [EXPR.setop, choice('∘', alias(ci('circ'), '∘'))],
        [EXPR.setop, choice('⊕', alias('', '⊕'), alias('<+', '⊕'))],
        [EXPR.setop, choice('◁', alias('<|', '◁'))],
        [EXPR.setop, choice('⩤', alias('<<|', '⩤'))],
        [EXPR.setop, choice('▷', alias('|>', '▷'))],
        [EXPR.setop, choice('⩥', alias('|>>', '⩥'))],
        [EXPR.setop, choice('⊗', alias('><', '⊗'))],
        [EXPR.setop, choice('∥', alias('||', '∥'))],
        // Interval constructor.
        [EXPR.interval, choice('‥', alias('..', '‥'))],
        // Arithmetic.
        [EXPR.additive, '+'],
        [EXPR.additive, choice('−', alias('-', '−'))],
        [EXPR.multiplicative, choice('∗', alias('*', '∗'))],
        [EXPR.multiplicative, choice('÷', alias('/', '÷'))],
        [EXPR.multiplicative, alias(ci('mod'), 'mod')],
        [EXPR.exponent, '^'],
      ];
      return choice(
        ...table.map(([level, operator]) =>
          prec.left(
            level,
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
      );
    },

    unary_expression: ($) =>
      prec(
        EXPR.unary,
        seq(
          field('operator', choice(
            choice('−', alias('-', '−')),
            choice('ℙ1', alias(ci('pow1'), 'ℙ1')),
            choice('ℙ', alias(ci('pow'), 'ℙ')),
            alias(ci('dom'), 'dom'),
            alias(ci('ran'), 'ran'),
          )),
          field('operand', $._expression),
        ),
      ),

    // Postfix converse: r∼ (r~).
    inverse_expression: ($) =>
      prec.left(
        EXPR.postfix,
        seq(field('operand', $._expression), choice('∼', alias('~', '∼'))),
      ),

    // Relational image: r[S].
    relational_image: ($) =>
      prec.left(
        EXPR.postfix,
        seq(
          field('relation', $._expression),
          '[',
          field('image', $._expression),
          ']',
        ),
      ),

    // Rodin's compact spelling of functional override: f{x ↦ y} is sugar for
    // f ⊕ {x ↦ y}.
    set_enumeration: ($) => seq('{', optional(commaSep1($._expression)), '}'),

    // Three forms (kernel_lang §3.3.6, rossi grammar.pest):
    //   {x, y · P | E}   extended (explicit binders)
    //   {x, y | P}       basic with binder list
    //   {E | P}          expression form, e.g. {x ↦ y | P}
    // For a single bare identifier the binder and expression forms coincide;
    // dynamic precedence picks the binder reading, like rossi's PEG order.
    function_application: ($) =>
      prec.left(
        EXPR.postfix,
        seq(
          field(
            'function',
            choice(
              $.identifier,
              $._identifier_like,
              $.builtin,
              $.function_application,
              $.function_override,
              $.parenthesized_expression,
              $.inverse_expression,
              $.relational_image,
              $.set_enumeration,
              $.set_comprehension,
            ),
          ),
          '(',
          commaSep1(field('argument', $._expression)),
          ')',
        ),
      ),

    parenthesized_expression: ($) => seq('(', $._expression, ')'),

    // ==========================
    // Atomic constants and builtins
    // ==========================

    builtin: ($) =>
      token(
        choice(
          ci('card'),
          ci('finite'),
          ci('id'),
          ci('max'),
          ci('min'),
          ci('partition'),
          ci('pred'),
          ci('prj1'),
          ci('prj2'),
          ci('succ'),
        ),
      ),

    // ==========================
    // Lexical tokens
    // ==========================

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_']*/,
    // Unsigned, unlike rossi's signed integer literal: a leading minus parses
    // as unary minus, so `x-1` cannot lex as `x` `(-1)`.
    number: ($) => /[0-9]+/,
    // Per the TextEditor EBNF: all characters following `@` belong to the
    // label until the next whitespace character.
    label: ($) => /@[^\s]+/,
    comment: ($) =>
      token(
        choice(
          seq('//', /[^\n]*/),
          seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
        ),
      ),
  },
});
