test/corpus/expressions.txt
================================================================================
arithmetic precedence and associativity
================================================================================

context C
  axioms
    @a x = a + b ∗ c ^ d
    @b y = a − b − c
    @c z = a mod b ÷ c
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier)
    (axioms_clause
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (binary_expression
              left: (identifier)
              right: (binary_expression
                left: (identifier)
                right: (identifier))))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (binary_expression
              left: (identifier)
              right: (identifier))
            right: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (binary_expression
              left: (identifier)
              right: (identifier))
            right: (identifier)))))))

================================================================================
unary minus takes a multiplicative term, the closed unaries stay tight
================================================================================

context C
  axioms
    @a x = − a ∗ b
    @b y = − a + b
    @c z = (− a) ∗ b
    @d S ⊆ ℙ(T)
    @e d = dom(f) ∪ ran(g)
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier)
    (axioms_clause
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (unary_expression
            operand: (binary_expression
              left: (identifier)
              right: (identifier)))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (unary_expression
              operand: (identifier))
            right: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (parenthesized_expression
              (unary_expression
                operand: (identifier)))
            right: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (unary_expression
            operand: (parenthesized_expression
              (identifier)))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (closed_unary_expression
              operand: (identifier))
            right: (closed_unary_expression
              operand: (identifier))))))))

================================================================================
maplets are left-associative, between the arrows and the set operators
================================================================================

context C
  axioms
    @a p = a ↦ b ↦ c
    @b q = a + 1 ↦ b × c
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier)
    (axioms_clause
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (binary_expression
              left: (identifier)
              right: (identifier))
            right: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (binary_expression
              left: (identifier)
              right: (number))
            right: (binary_expression
              left: (identifier)
              right: (identifier))))))))

================================================================================
relation arrows and set operators
================================================================================

context C
  axioms
    @a f ∈ A × B → C
    @b g ∈ A ⇸ B
    @c h ∈ A ↣ B ∪ C
    @d r ∈ A  B
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier)
    (axioms_clause
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (binary_expression
              left: (identifier)
              right: (identifier))
            right: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (binary_expression
              left: (identifier)
              right: (identifier)))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (identifier)))))))

================================================================================
intervals, restrictions, overrides, composition
================================================================================

context C
  axioms
    @a I = 1 ‥ n − 1
    @b r = S ◁ f <+ g ▷ T
    @c s = f ; g ∘ h
    @d t = A ⩤ r ⩥ B
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier)
    (axioms_clause
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (number)
            right: (binary_expression
              left: (identifier)
              right: (number)))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (binary_expression
              left: (binary_expression
                left: (identifier)
                right: (identifier))
              right: (identifier))
            right: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (binary_expression
              left: (identifier)
              right: (identifier))
            right: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (binary_expression
              left: (identifier)
              right: (identifier))
            right: (identifier)))))))

================================================================================
postfix: application, image, inverse
================================================================================

context C
  axioms
    @a y = f(x)
    @b y = f(a ↦ b)(c)
    @c T = r[S]
    @d s = f∼(x)
    @e u = r[S]∼
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier)
    (axioms_clause
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (function_application
            function: (identifier)
            argument: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (function_application
            function: (function_application
              function: (identifier)
              argument: (binary_expression
                left: (identifier)
                right: (identifier)))
            argument: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (relational_image
            relation: (identifier)
            image: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (function_application
            function: (inverse_expression
              operand: (identifier))
            argument: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (inverse_expression
            operand: (relational_image
              relation: (identifier)
              image: (identifier))))))))

================================================================================
ASCII expression operators
================================================================================

context C
  axioms
    @a p = a |-> b
    @b f : A +-> B \/ C
    @c I = 1 .. n
    @d x = a ** b * c
    @e r = f ~
    @f S = POW(T) \ U
    @g m = a mod 2
    @h g : A <<-> B
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier)
    (axioms_clause
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (binary_expression
              left: (identifier)
              right: (identifier)))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (number)
            right: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (binary_expression
              left: (identifier)
              right: (identifier)))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (inverse_expression
            operand: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (unary_expression
              operand: (parenthesized_expression
                (identifier)))
            right: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (number))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (identifier)))))))

================================================================================
type ascription
================================================================================

context C
  axioms
    @b p = prj1 ⦂ T
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier)
    (axioms_clause
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (binary_expression
            left: (builtin)
            right: (identifier)))))))

================================================================================
incompatible set operators still parse: Table 3.2 is a semantic check
================================================================================

context C
  axioms
    @a c = {1} ∪ {2} ∩ {3}
    @b d = A ▷ B ∩ C
end

--------------------------------------------------------------------------------

(source_file
  (context
    (identifier)
    (axioms_clause
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (binary_expression
            (binary_expression
              (set_enumeration
                (number))
              (set_enumeration
                (number)))
            (set_enumeration
              (number)))))
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (binary_expression
            (binary_expression
              (identifier)
              (identifier))
            (identifier)))))))

================================================================================
a minus after the exponent binds tightly
================================================================================

context C
  axioms
    @a c = 2 ^ −3 ∗ 4
    @b d = −a ∗ b
    @c e = −a + b
end

--------------------------------------------------------------------------------

(source_file
  (context
    (identifier)
    (axioms_clause
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (binary_expression
            (binary_expression
              (number)
              (unary_expression
                (number)))
            (number))))
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (unary_expression
            (binary_expression
              (identifier)
              (identifier)))))
      (axiom
        (label)
        (comparison_predicate
          (identifier)
          (binary_expression
            (unary_expression
              (identifier))
            (identifier)))))))

================================================================================
postfix: a comma list in expression application
================================================================================

context C
  axioms
    @g x = c(1, 2)
    @h f(a, b) = c
    @i f(a, b) ∧ g(c) = d
    @j f(a ↦ b)(c, d) = e
end

--------------------------------------------------------------------------------

(source_file
  (context
    name: (identifier)
    (axioms_clause
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (identifier)
          right: (function_application
            function: (identifier)
            argument: (number)
            argument: (number))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (function_application
            function: (identifier)
            argument: (identifier)
            argument: (identifier))
          right: (identifier)))
      (axiom
        label: (label)
        predicate: (binary_predicate
          left: (predicate_application
            function: (identifier)
            argument: (identifier)
            argument: (identifier))
          right: (comparison_predicate
            left: (function_application
              function: (identifier)
              argument: (identifier))
            right: (identifier))))
      (axiom
        label: (label)
        predicate: (comparison_predicate
          left: (function_application
            function: (function_application
              function: (identifier)
              argument: (binary_expression
                left: (identifier)
                right: (identifier)))
            argument: (identifier)
            argument: (identifier))
          right: (identifier))))))
